--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Reset CSS -->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <!-- Style -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+
     <title>Figma-2-HTML</title>
   </head>
   <body>
